# diffformer

./: LICENSE  README.md  pyproject.toml  train.py
diffformer/: __init__.py
src/diffformer/: model.py  utils.py
src/flowformer/: __init__.py  model.py  reference_model.py  utils.py
tools/: dataset.py  generate.py  test.py  train.py
