[project]
name = "diffformer"
version = "0.1.0"
description = "Diffusion-based transformer model for language modeling"
authors = [{ name = "Kelsey Sorrels", email = "kelsey.d.sorrels+diffformer@gmail.com" }]
requires-python = ">= 3.10"
dependencies = [
    "torch>=2.1.0",
    "matplotlib",
    "nltk",
    "ptflops",
    "requests>=2.32.3",
    "transformers>=4.51.1",
    "datasets>=3.5.0",
    "termcolor>=3.0.1",
    "torchdiffeq>=0.2.5",
    "torchviz>=0.0.3",
]

[tool.pdm]
packages = [{ include = "diffformer" }]